--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
   width: 1000px;
   margin: 0 auto;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
 }
 
 .start-div {
@@ -75,7 +75,7 @@ body {
 
 .section-content {
   width: 1000px;
-  height: 100vw;
+  height: 100%;
   margin: 0 auto;
   display: flex;
 }
@@ -111,7 +111,6 @@ body {
 }
 
 .icon-div {
-  /* background-color: #fff; */
   border-radius: 50%;
   border: 1px solid #bbb;
   width: 20px;
@@ -302,8 +301,123 @@ body {
   margin: 20px 0;
 }
 
+.navbar2 {
+  display: none;
+}
+
 @media (min-width: 614px) and (max-width: 935px) {
   .sidebar {
     display: none;
+  }
+
+  .main-content {
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+  }
+
+  .section-content {
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .navbar_content {
+    width: 100%;
+    margin: 0;
+  }
+
+  .navbar2 {
+    display: none;
+  }
+}
+
+@media (max-width: 613px) {
+  .sidebar {
+    display: none;
+  }
+
+  .main-content {
+    overflow-x: hidden;
+    height: 100%;
+    width: 100%;
+  }
+
+  .section-content {
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+  }
+
+  .stories {
+    margin-top: 0;
+    background-color: #fafafa;
+    border: 0;
+  }
+
+  .icon-div img {
+    display: none;
+  }
+
+  .post {
+    width: 100%;
+  }
+
+  .navbar_content {
+    width: 100%;
+    flex: 1;
+    margin: 0 15px;
+  }
+
+  .barra_vertical {
+    display: none;
+  }
+
+  .search {
+    display: none;
+  }
+
+  .vector-icon {
+    display: none;
+  }
+
+  .activity-icon {
+    display: none;
+  }
+
+  .account-icon {
+    display: none;
+  }
+
+  .navbar2 {
+    display: flex;
+    width: 100%;
+    height: 54px;
+    background-color: #fff;
+    border: 1px solid #dbdbdb;
+    position: fixed;
+    top: 790px;
+    left: 0;
+    align-items: center;
+  }
+
+  .navbar2 ion-icon {
+    flex: 1;
+    font-size: 25px;
+  }
+
+  .middle-post ion-icon {
+    top: 260px;
+    left: 170px;
+  }
+
+  .start-div {
+    display: flex;
+    flex: 1;
+    
+  }
+
+  .logo-div {
+    margin-left: 100px;
   }
 }
